[gd_scene load_steps=8 format=3 uid="uid://dsjnbvgb2vwel"]

[ext_resource type="Script" uid="uid://co6dulohj8rtm" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="AudioStream" uid="uid://diq8p3i4cyjs5" path="res://assets/9 Searching Further INTRO TomMusic.ogg" id="3_lquwl"]
[ext_resource type="Texture2D" uid="uid://clu0poth8evfr" path="res://assets/trace_06.png" id="4_7mycd"]
[ext_resource type="Texture2D" uid="uid://ybkvm813d53c" path="res://assets/A far away place_2_640x360.png" id="4_272bh"]
[ext_resource type="AudioStream" uid="uid://d3e08mv4nwb6k" path="res://assets/Forest Night Rain.ogg" id="4_lquwl"]

[sub_resource type="Gradient" id="Gradient_5vw27"]
offsets = PackedFloat32Array(0.0333333, 0.905473)
colors = PackedColorArray(0.650128, 0.650128, 0.650128, 1, 0.5625, 0.5625, 0.5625, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.0962047, 0.0962048, 0.0962047, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -12.0
offset_right = 96.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_272bh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lquwl")
parameters/looping = true

[node name="RainSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lquwl")
parameters/looping = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="rain" type="CPUParticles2D" parent="CanvasLayer"]
position = Vector2(124, -67)
rotation = -0.37524
emitting = false
amount = 300
texture = ExtResource("4_7mycd")
lifetime = 0.7
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(280, 1)
direction = Vector2(0, 1)
spread = 0.0
initial_velocity_min = 100.0
initial_velocity_max = 400.0
scale_amount_min = 0.4
scale_amount_max = 0.8
color_ramp = SubResource("Gradient_5vw27")

[node name="objective_label" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 92.0
offset_top = 87.0
offset_right = 370.0
offset_bottom = 136.0
text = "light all torches"
horizontal_alignment = 1

[node name="GameMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_top = 22.0
offset_right = 91.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "The Last Survivor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play" type="Button" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -17.5
offset_right = 62.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="credits" type="Button" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = 37.5
offset_right = 62.5
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
text = "Credits"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/GameMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -143.0
offset_right = 211.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_lquwl")
bbcode_enabled = true
text = "[center][b]Third-Party Assets & Attributions[/b][/center]

[b]Sprites & Textures:[/b]  
- \"Fire Spirit\" by [url=https://ramenphysics22.itch.io/fire-wisp]fire-wisp[/url]
- \"Hooded Guy\" by [url=https://penzilla.itch.io/hooded-protagonist]Penzilla[/url]
- \"Torch\" by [url=https://rone3190.itch.io/torch-32x32-animated]rone3190[/url]

[b]Music & Sound Effects:[/b]  
- \"Free Fantasy 200 SFX Pack\" by [url=https://tommusic.itch.io/free-fantasy-200-sfx-pack]TomMusic[/url]
"

[node name="close_credits" type="Button" parent="CanvasLayer/GameMenu"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -54.0
offset_right = 62.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[connection signal="pressed" from="CanvasLayer/GameMenu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenu/credits" to="." method="_on_credits_pressed"]
[connection signal="meta_clicked" from="CanvasLayer/GameMenu/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="CanvasLayer/GameMenu/close_credits" to="." method="_on_close_credits_pressed"]
